<resources>
    <string name="app_name">Material Design</string>
    <string name="fab">fab</string>
    <string name="empty_text" />
    <string name="melnykov_fab">Melnykov Fab</string>
    <string name="getbase_fab">Getbase Fab</string>
    <string name="toolbar">Toolbar</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="snackbar">Snackbar</string>
    <string name="cardview_recyclerview">CardView RecyclerView</string>
    <string name="write_name">Write name:</string>
    <string name="write_age">Write age:</string>
    <string name="your_position">Your position:</string>
</resources>
